S13nServiceWorker: Fix update logic when the scripts are identical.

The code was accidentally telling ServiceWorkerVersion that the new
script was installed instead of aborting the installation.

R=shimazu

Bug: 766442
Change-Id: I9683ca3f833a6b511204ce3b2320af48ce7f18fb
Reviewed-on: https://chromium-review.googlesource.com/927967
Reviewed-by: Makoto Shimazu <shimazu@chromium.org>
Commit-Queue: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538052}
Former-commit-id: e41ca8fb381ab55a299c3a4466477dd7bc1bd173